--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 factorio-server:
-    image: 'factorio-server'
+    image: 'factorio-server:latest'
     ports:
         - '34197:34197/udp'
+        - '27015:27015/tcp'
     volumes:
         - './server:/factorio'
