--- a/build
+++ b/build
@@ -2,4 +2,4 @@
 
 # Start the docker container and detach
 cd docker
-sudo docker build -t factorio-server .
+sudo docker build -t factorio-server:latest .
