Properly download and extract Factorio headdless, use version 0.15.10

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,7 @@ FROM frolvlad/alpine-glibc:alpine-3.3_glibc-2.23
 MAINTAINER Tim Visée <timvisee@gmail.com>
 
 # Configure the environment
-ENV FACTORIO_SERVER_VERSION 0.15.9
+ENV FACTORIO_SERVER_VERSION 0.15.10
 
 # Create and set the work directory
 RUN mkdir -p /opt
@@ -14,22 +14,22 @@ WORKDIR /opt
 # Upgrade and install required packages
 RUN apk update \
  && apk upgrade \
- && apk add bash wget curl
+ && apk add bash wget
 
 # Download the Factorio server
-RUN wget --content-disposition "https://www.factorio.com/get-download/${FACTORIO_SERVER_VERSION}/headless/linux64" \
- && if [ -f factorio_headless_x64_0.15.9.tar.gz ]; then \
-        tar xzf factorio_headless_x64_0.15.9.tar.gz; \
-    elif [ -f factorio_headless_x64_0.15.9.tar.xz ]; then \
-        tar xJf factorio_headless_x64_0.15.9.tar.xz; \
+RUN wget --content-disposition --no-check-certificate "https://www.factorio.com/get-download/${FACTORIO_SERVER_VERSION}/headless/linux64" \
+ && if [ -f "factorio_headless_x64_${FACTORIO_SERVER_VERSION}.tar.gz" ]; then \
+        tar xzf "factorio_headless_x64_${FACTORIO_SERVER_VERSION}.tar.gz"; \
+    elif [ -f "factorio_headless_x64_${FACTORIO_SERVER_VERSION}.tar.xz" ]; then \
+        tar xJf "factorio_headless_x64_${FACTORIO_SERVER_VERSION}.tar.xz"; \
     else \
         echo "No valid Factorio archive found!"; \
         exit 1; \
     fi \
- && rm factorio_headless_x64_0.15.9.tar.*
+ && rm factorio_*
 
 # Delete unused packages and cache
-RUN apk del wget curl \
+RUN apk del wget \
  && rm -rf /var/cache/apk/* \
  && rm -rf /root/.cache
 
